# distrubused_and_multicore

./: CMakeLists.txt  Readme.md  text_message.c
homeworks/homework_1/: Hometask 1.md
homeworks/homework_1/src/: task_1_p.c  task_1_s.c  task_2.c  task_3.c
homeworks/homework_2/src/: task_5.c
lesson1/: helloworld01.c  pr1.out  pr2.out  programm.c  programm2.c  ring.c  ring.out
